<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <item
      android:id="@+id/action_bookmark"
      android:icon="@drawable/round_bookmark_border_white_24"
      android:title="@string/add_bookmark"
      android:visible="false"
      app:showAsAction="always"
      tools:ignore="AlwaysShowAction" />
  <item
      android:id="@+id/action_zoom_out"
      android:icon="@drawable/round_zoom_out_white_24"
      android:title="@string/zoom_out"
      app:showAsAction="always" />
  <item
      android:id="@+id/action_zoom_in"
      android:icon="@drawable/round_zoom_in_white_24"
      android:title="@string/zoom_in"
      app:showAsAction="always" />
</menu>
