<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:maxLines="1"
      android:text="@string/clear_title"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      app:fontFamily="@font/kantumruy"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/clear_message"
      app:fontFamily="@font/kantumruy"
      app:layout_constraintTop_toBottomOf="@id/tv_title" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_clear"
      style="@style/Widget.AppCompat.Button.Borderless.Colored"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/confirm"
      app:fontFamily="@font/kantumruy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_description" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_cancel"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/cancel"
      app:fontFamily="@font/kantumruy"
      app:layout_constraintEnd_toStartOf="@id/btn_clear"
      app:layout_constraintTop_toBottomOf="@id/tv_description" />

</androidx.constraintlayout.widget.ConstraintLayout>